--- a/src/login.html
+++ b/src/login.html
@@ -17,13 +17,13 @@
 
         <!-- Icon -->
         <div class="fadeIn first">
-            <img src="../ressources/pizza.png" id="icon" alt="User Icon" />
+            <img src="pizza.png" id="icon" alt="User Icon" />
         </div>
 
         <!-- Login Form -->
-        <form action="/token" method="post">
+        <form action="token" method="post">
             <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-            <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+            <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
             <input type="submit" class="fadeIn fourth" value="Log In">
         </form>
 
