--- a/WEB-INF/classes/login.html
+++ b/WEB-INF/classes/login.html
@@ -21,7 +21,7 @@
         </div>
 
         <!-- Login Form -->
-        <form action="token" method="post">
+        <form action="tokenjwt" method="post">
             <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
             <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
             <input type="submit" class="fadeIn fourth" value="Log In">
